# identikit

./: .gitignore  Makefile  PROJECTS.md  README.md  RELEASE.md  guard.sh  identikit-spec.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
examples/py-launch-blueprint/: identikit.toml
src/identikit/: __init__.py  cli.py  common.py  defaults.py  discover.py  doctor.py  engine.py  features.py  gitctx.py  marker.py  preflight.py  rewriters.py
tests/: conftest.py  test_cli.py  test_common.py  test_defaults.py  test_discover.py  test_doctor.py  test_engine.py  test_examples.py  test_features.py  test_guard.py  test_marker.py  test_preflight.py  test_rewriters.py
