[project]
name = "identikit"
version = "0.1.0"
description = "Rewrite a live template repo's identity into a new project — one-shot, in-place, config-driven."
readme = "README.md"
authors = [
    { name = "Steve Morin", email = "steve.morin@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tomlkit>=0.13.0",
]

[project.scripts]
identikit = "identikit.cli:main"
idkit = "identikit.cli:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=identikit",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
testpaths = ["tests"]
markers = [
    "integration: real subprocess / git / filesystem end-to-end tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = [
    "S603",  # subprocess use is intentional and controlled
    "S607",  # partial executable paths (git/uv) are intentional
    "B008",  # typer's Option()/Argument()-in-default is the documented idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are expected in tests
